--- a/index.html
+++ b/index.html
@@ -15,11 +15,45 @@
       <h1>Street Tacos</h1>
     </header>
     <nav>
-      Street Tacos
-      Save  (save svg)
-      Share (share svg)
-      Print (print svg)
-      Jump to Recipe (jump svg)
+      <a href="">  
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-download" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
+          <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+          <path d="M4 17v2a2 2 0 0 0 2 2h12a2 2 0 0 0 2 -2v-2" />
+          <polyline points="7 11 12 16 17 11" />
+          <line x1="12" y1="4" x2="12" y2="16" />
+        </svg>
+        <figcaption>SAVE</figcaption>
+      </a>
+      <a href=""> 
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-share" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
+          <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+          <circle cx="6" cy="12" r="3" />
+          <circle cx="18" cy="6" r="3" />
+          <circle cx="18" cy="18" r="3" />
+          <line x1="8.7" y1="10.7" x2="15.3" y2="7.3" />
+          <line x1="8.7" y1="13.3" x2="15.3" y2="16.7" />
+        </svg>
+        <figcaption>SHARE</figcaption>
+      </a>
+      <a href="">  
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-printer" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
+          <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+          <path d="M17 17h2a2 2 0 0 0 2 -2v-4a2 2 0 0 0 -2 -2h-14a2 2 0 0 0 -2 2v4a2 2 0 0 0 2 2h2" />
+          <path d="M17 9v-4a2 2 0 0 0 -2 -2h-6a2 2 0 0 0 -2 2v4" />
+          <rect x="7" y="13" width="10" height="8" rx="2" />
+        </svg>
+        <figcaption>PRINT</figcaption>
+      </a>
+      <a href=""> 
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-file-symlink" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
+          <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+          <path d="M4 21v-4a3 3 0 0 1 3 -3h5" />
+          <path d="M9 17l3 -3l-3 -3" />
+          <path d="M14 3v4a1 1 0 0 0 1 1h4" />
+          <path d="M5 11v-6a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2h-9.5" />
+        </svg>
+        <figcaption>JUMP TO RECIPE</figcaption>
+      </a>
     </nav>
     <img title="tacos" src="images/street-tacos.png" alt="">
     
@@ -93,16 +127,43 @@
     Beverages (beverages.png)
     (avatar svg)
     Search (search svg)
-    Connect
-    Social Media Links
-    Facebook (facebook svg)
-    Instagram (instagram svg)
-    YouTube (youtube svg)
-    Tik Tok (tiktok svg)
-    Good Eats 
+    <article>
+      <a href="">
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-facebook" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
+          <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+          <path d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3" />
+        </svg>
+        <figcaption>FACEBOOK</figcaption>
+      </a>
+      <a href="">  
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-instagram" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
+          <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+          <rect x="4" y="4" width="16" height="16" rx="4" />
+          <circle cx="12" cy="12" r="3" />
+          <line x1="16.5" y1="7.5" x2="16.5" y2="7.501" />
+        </svg>
+        <figcaption>INSTAGRAM</figcaption>
+      </a>
+      <a href="">  
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-youtube" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
+          <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+          <rect x="3" y="5" width="18" height="14" rx="4" />
+          <path d="M10 9l5 3l-5 3z" />
+        </svg>
+        <figcaption>YOUTUBE</figcaption>
+      </a>
+      <a href="">
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-tiktok" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
+          <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+          <path d="M9 12a4 4 0 1 0 4 4v-12a5 5 0 0 0 5 5" />
+        </svg>
+      <figcaption>TIK TOK</figcaption>  
+      </a>  
+    </article>
+  </body>
+  <footer>     
+    <img src="images/taco-cheesington.png" alt="">
     Copyright 2022 
     Taco Cheesington
-    (Taco-cheesington.png)
-    
-  </body>
+  </footer>
 </html>
