--- a/index.html
+++ b/index.html
@@ -103,12 +103,21 @@
     </p>
 
     <h2>Details</h2>
-    <p class="DT">Prep Time</p> 10 minutes
-    <p class="DT">Cook Time</p> 10 minutes
-    <p class="DT">Total Time</p> 20 minutes
-    <p class="DT">Author</p> Taco Cheesington
-    <p class="DT">Servings</p> 6 Tacos
-    
+      <div class="prep">
+        <p class="DT">Prep Time</p> 10 minutes
+      </div>
+      <div class="prep">  
+        <p class="DT">Cook Time</p> 10 minutes
+      </div>
+      <div class="prep">
+        <p class="DT">Total Time</p> 20 minutes
+      </div>
+      <div class="prep">  
+        <p class="DT">Author</p> Taco Cheesington
+      </div>
+      <div class="prep">  
+        <p class="DT">Servings</p> 6 Tacos
+      </div>
     <h2>Ingredients</h2>
       <ul>
         <li>Flank steak</li>
@@ -123,7 +132,7 @@
         <li>Pepper</li> 
         <li>Corn tortillas</li>
       </ul>
-    <h2 class="directions">Directions</h2>
+    <h2>Directions</h2>
       <ol>
         <li>Cut and mix: Cut the flank steak into one inch pieces. In a medium sized bowl add the soy sauce, Worcestershire, juice from one lime, cilantro, chili powder, cumin, and salt and pepper.</li>
         <li>Marinate: Add the steak and let marinate in the fridge for 1-2 hours.</li>
