--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
             </svg>
             <figcaption>MENU</figcaption>
           </a>
-        </li>  
+        </li>
+        <ul>    
         <li>  
           <a class="avatar" href="">
             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-tools-kitchen" width="60" height="60" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -35,6 +36,7 @@
             </svg>
           </a>
         </li>
+        </ul>
         <li>    
         <a class="sign" href="">
           <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-user-circle" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="#ffffff" stroke-linecap="round" stroke-linejoin="round">
@@ -46,6 +48,50 @@
           <figcaption>SIGN IN/UP</figcaption>
         </a>
         </li>  
+      </ul>
+      <ul class="main-nav">
+        <li>
+          <a href="">
+            <img src="images/breakfast.png" alt="">
+            BREAKFAST
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <img src="images/brunch.png" alt="">
+            BRUNCH
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <img src="images/lunch.png" alt="">
+            LUNCH
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <img src="images/dinner.png" alt="">
+            DINNER
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <img src="images/appetizers.png" alt="">
+            APPETIZERS
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <img src="images/desserts.png" alt="">
+            DESSERTS
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <img src="images/beverages.png" alt="">
+            BEVERAGES
+          </a>
+        </li>
       </ul>  
     </nav>
     <div class="search">
@@ -58,7 +104,7 @@
             <line x1="21" y1="21" x2="15" y2="15" />
           </svg>
         </a>  
-    </div> 
+    </div>  
     <h1>Street Tacos</h1>
     <article class="caption">
       <a href="">  
