--- a/index.html
+++ b/index.html
@@ -45,51 +45,51 @@
             <circle cx="12" cy="10" r="3" />
             <path d="M6.168 18.849a4 4 0 0 1 3.832 -2.849h4a4 4 0 0 1 3.834 2.855" />
           </svg>
-          <figcaption>SIGN IN/UP</figcaption>
+          <figcaption>SIGN IN</figcaption>
         </a>
         </li>  
       </ul>
       <ul class="main-nav">
         <li>
-          <a href="">
+          <a class="main" href="">
             <img src="images/breakfast.png" alt="">
-            BREAKFAST
+            <figcaption>BREAKFAST</figcaption>
           </a>
         </li>
         <li>
-          <a href="">
+          <a class="main" href="">
             <img src="images/brunch.png" alt="">
-            BRUNCH
+            <figcaption>BRUNCH</figcaption>
           </a>
         </li>
         <li>
-          <a href="">
+          <a class="main" href="">
             <img src="images/lunch.png" alt="">
-            LUNCH
+            <figcaption>LUNCH</figcaption>
           </a>
         </li>
         <li>
-          <a href="">
+          <a class="main" href="">
             <img src="images/dinner.png" alt="">
-            DINNER
+            <figcaption>DINNER</figcaption>
           </a>
         </li>
         <li>
-          <a href="">
+          <a class="main" href="">
             <img src="images/appetizers.png" alt="">
-            APPETIZERS
+            <figcaption>APPETIZERS</figcaption>
           </a>
         </li>
         <li>
-          <a href="">
+          <a class="main" href="">
             <img src="images/desserts.png" alt="">
-            DESSERTS
+            <figcaption>DESSERTS</figcaption>
           </a>
         </li>
         <li>
-          <a href="">
+          <a class="main" href="">
             <img src="images/beverages.png" alt="">
-            BEVERAGES
+            <figcaption>BEVERAGES</figcaption>
           </a>
         </li>
       </ul>  
