--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           </svg>
         </a>  
     </div>  
-    <h1>Street Tacos</h1>
+    <h1 class="street-tacos">Street Tacos</h1>
     <article class="caption">
       <a href="">  
         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-download" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
