--- a/index.html
+++ b/index.html
@@ -157,24 +157,26 @@
       These street tacos are completely jam-packed with flavor and they are so easy to make. I love how the meat is so tender and juicy and only takes an hour to marinate! If you absolutely love tacos like me, try out these other amazing taco recipes! These taco-stuffed avocados, Baja fish tacos, and ground beef tacos will not disappoint!!
     </p>
 
-    <h2>Details</h2>
-      <div class="prep">
-        <p class="DT">Prep Time</p> 10 minutes
-      </div>
-      <div class="prep">  
-        <p class="DT">Cook Time</p> 10 minutes
-      </div>
-      <div class="prep">
-        <p class="DT">Total Time</p> 20 minutes
-      </div>
-      <div class="prep">  
-        <p class="DT">Author</p> Taco Cheesington
-      </div>
-      <div class="prep">  
-        <p class="DT">Servings</p> 6 Tacos
-      </div>
-    <h2>Ingredients</h2>
-      <ul>
+    <div class="prep-container">
+      <h2>Details</h2>
+        <div class="prep">
+          <p class="DT">Prep Time</p> 10 minutes
+        </div>
+        <div class="prep">  
+          <p class="DT">Cook Time</p> 10 minutes
+        </div>
+        <div class="prep">
+          <p class="DT">Total Time</p> 20 minutes
+        </div>
+        <div class="prep">  
+          <p class="DT">Author</p> Taco Cheesington
+        </div>
+        <div class="prep">  
+          <p class="DT">Servings</p> 6 Tacos
+        </div>
+    </div>    
+    <h2 class="ingredients">Ingredients</h2>
+      <ul class="Ingredients">
         <li>Flank steak</li>
         <li>Soy Sauce</li>
         <li>Worcestershire sauce</li>
@@ -187,16 +189,16 @@
         <li>Pepper</li> 
         <li>Corn tortillas</li>
       </ul>
-    <h2>Directions</h2>
-      <ol>
+    <h2 class="directions">Directions</h2>
+      <ol class="Directions">
         <li>Cut and mix: Cut the flank steak into one inch pieces. In a medium sized bowl add the soy sauce, Worcestershire, juice from one lime, cilantro, chili powder, cumin, and salt and pepper.</li>
         <li>Marinate: Add the steak and let marinate in the fridge for 1-2 hours.</li>
         <li>Cook the meat: Heat a medium sized skillet to medium high heat. Add the steak and marinade and cook for about 5-7 minutes or until no longer pink.</li>
         <li>Add toppings: Put the steak in the center of your tortilla with desired toppings.</li>
       </ol>
-    <section>
-      <h2>Need some side dishes?</h2>
-      <figure>
+    <section class="dishes">
+      <h2 class="txt">Need some side dishes?</h2>
+      <figure >
         <img src="images/mexican-rice.png" alt="">
           <div class="details">
             <h3 class="dish">Mexican Rice</h3>
